slide img show home

--- a/src/app/admin/edit-content/edit-content.component.html
+++ b/src/app/admin/edit-content/edit-content.component.html
@@ -102,7 +102,7 @@
         </div>
       </div>
     </mat-tab>
-    <mat-tab label="Banner"> 
+    <mat-tab label="ไฮไลท์"> 
       <div class="card mb-3" *ngFor="let item of shopPage.img;let i = index;" style="max-width: 540px;background-color: #3F51B5;">
         <div class="row g-0">
           <div class="col-md-5">
