--- a/src/app/navBavcomponents/public-navbar/public-navbar.component.html
+++ b/src/app/navBavcomponents/public-navbar/public-navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar style="background-color: #303F9F;color: aliceblue;">
-  
+  <img src="{{logo}}" style="width: 90px;">
   <span>{{nameShop}}</span>
   <span class="example-spacer"></span>
   <button mat-flat-button color="warn" (click)="login()">log in</button>
