--- a/src/app/navBavcomponents/user-navbar/user-navbar.component.html
+++ b/src/app/navBavcomponents/user-navbar/user-navbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar fixed style="background-color: #303F9F;color: aliceblue;">
   <!-- <div style="top:0;position:fixed;"> -->
+  <img src="{{logo}}" style="width: 90px;margin: 0;padding: 0;">
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="sidenav.toggle()" *ngIf="state">
     <mat-icon>menu</mat-icon>
   </button>
