--- a/src/app/admin/add-spec/add-spec.component.html
+++ b/src/app/admin/add-spec/add-spec.component.html
@@ -11,7 +11,7 @@
       <div class="list-group" id="list-tab" role="tablist">
         <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" style="margin-bottom: 20px;"(click)="new()">เพิ่มรายการใหม่</a>
         <a class="list-group-item list-group-item-action" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home" *ngFor="let item of DBSpecs" (click)="selectEdit(item)">{{ item.name }}
-         <button class="btn btn-danger" style="float: right;" (click)="DeleteSpec(item)">Delete</button> 
+         <button class="btn btn-danger" style="float: right;" *ngIf="false" (click)="DeleteSpec(item)">Delete</button> 
         </a>
       </div>
     </div>
