--- a/src/app/admin/edit-content/edit-content.component.html
+++ b/src/app/admin/edit-content/edit-content.component.html
@@ -2,7 +2,16 @@
   <mat-tab-group>
     <mat-tab label="ทั่วไป">
       <div class="mb-3 row" style="width: 80%;">
-        <label for="inputPassword" class="fs-4 col-form-label" style="margin-top: 50px;display: inline-block"
+        <div style="margin-top: 50px;">
+            
+            <label for="inputPassword" class="fs-4 col-form-label" style="margin-top: 50px;display: inline-block"
+            >โลโก้ร้าน</label
+            >
+            <img src="{{shopPage.logo}}" style="width:200px;">
+            <!-- <button type="button" class="btn btn-warning">แก้ไขโลโก้</button>   -->
+            <input type="file" #myInputImg class="form-control-file"  (change)="onChangeLogo($event)">
+          </div>
+        <label for="inputPassword" class="fs-4 col-form-label" style="margin-top: 20px;display: inline-block"
           >ชื่อร้าน</label
         >
         <div >
@@ -32,10 +41,11 @@
                 [(ngModel)]="shopPage.shipping"
               />
             </div>
-            <label for="inputPassword" class="col-sm-3 fs-4 col-form-label"
+            
+            <label for="inputPassword" class="col-sm-3 fs-4 col-form-label" style="margin-top: 10px ;"
               >เก็บค่าจัดส่ง</label
             >
-            <div class="col-sm-9">
+            <div class="col-sm-9" style="margin-top: 10px ;">
               <input
                 type="text"
                 style="width: 200px; display: inline-block"
@@ -77,7 +87,7 @@
                     <div class="card-body">
                       <input class="form-control fs-4" type="text" [(ngModel)]="shopPage.address" >
                       <!-- <button (click)="openDialog()">แก้ไข้ที่อยู่</button> -->
-                      <button type="button" class="btn btn-warning" (click)="openDialog()">แก้ไข้ที่อยู่</button>
+                      <button type="button" class="btn btn-warning" style="margin-top: 15px;" (click)="openDialog()">แก้ไขที่อยู่</button>
                     </div>
                   </div>
                 </div>
