--- a/src/app/login-components/login-components.component.html
+++ b/src/app/login-components/login-components.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar style="background-color: #303F9F;color: aliceblue;">
+  <img src="{{logo}}" style="width: 90px;margin: 0;padding: 0;">
   <span><a (click)="home()">{{nameShop}}</a> </span>
   <span class="example-spacer"></span>
 </mat-toolbar>
