--- a/src/app/side-navadmin/side-navadmin.component.html
+++ b/src/app/side-navadmin/side-navadmin.component.html
@@ -1,7 +1,9 @@
 <mat-toolbar fixed color="primary" >
+  <img src="{{logo}}" style="width: 90px;margin: 0;padding: 0;">
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="sidenav.toggle()">
    <mat-icon>menu</mat-icon>
  </button>
+ 
  <span>{{nameShop}}</span>  
  <span class="example-spacer"></span>
  <span style="margin-right: 20px;">{{decoded.role}} : <span style="color: yellow;">{{decoded.name}}</span></span> 
