--- a/src/app/admin/prepare-order/prepare-order.component.html
+++ b/src/app/admin/prepare-order/prepare-order.component.html
@@ -5,6 +5,7 @@
         <div class="card-body">
          <div>
             <!-- {{ item | json}} -->
+            <p>{{item._id}}</p>
             <div class="card">
                <div class="card-body">
                  <span>user: {{item.idUser.name}}</span>
