--- a/src/app/admin/prepare-order/prepare-order.component.html
+++ b/src/app/admin/prepare-order/prepare-order.component.html
@@ -1,4 +1,4 @@
-<p>prepare-order works!</p>
+
 
 <div style="margin-top:30px" *ngFor="let item of order">
     <div class="card">
@@ -13,7 +13,7 @@
                  
                </div>
              </div>
-             <div class="card">
+             <div class="card" style="margin-top: 15px;">
                <div class="card-body">
                   <h5 class="card-title">รายการสินค้า</h5>
                   <div *ngFor="let product of item.idCart.list">
