--- a/src/app/customer/detail-for-slip/detail-for-slip.component.html
+++ b/src/app/customer/detail-for-slip/detail-for-slip.component.html
@@ -1,10 +1,10 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col">
+        <div class="col-6">
             <div *ngFor="let item of cart?.list" class="detail">
             
-            <div style="width: 110px;display: inline-block;margin-top: 10px;">{{item.idProduct.spec[0].value}} </div>
+            <div style="width: 310px;display: inline-block;margin-top: 10px;">{{item.idProduct.spec[0].value}} </div>
             : 
             <div style="margin-left: 10px;display:inline"> {{item.quantity}} </div>
             <div style="margin-left: 10px;display:inline"> จำนวน </div>
@@ -15,12 +15,12 @@
             <!-- shipping -->
 
             <div class="detail" style="margin-top: 10px;display: inline-block;width: 100px;">ค่าจัดส่ง</div>
-            <div class="detail" style="margin-top: 10px;display: inline-block;width: 252px;text-align: end;">{{cost_shipping}}</div>
+            <div class="detail" style="margin-top: 10px;display: inline-block;width: 452px;text-align: end;">{{cost_shipping}}</div>
             <div class="detail" style="margin-left: 15px;display:inline-block"> บาท </div>
             <hr style="height:3px;width:100%">
             <!-- shipping + sum -->
             <div class="detail" style="margin-top: 10px;display: inline-block;width: 180px;">จำนวนเงินที่ต้องชำระ</div>
-            <div class="detail" style="margin-top: 10px;display: inline-block;width: 175px;text-align: end;">{{sum}}</div>
+            <div class="detail" style="margin-top: 10px;display: inline-block;width: 375px;text-align: end;">{{sum}}</div>
             <div class="detail" style="margin-left: 15px;display:inline-block"> บาท </div>
         </div>
 
