--- a/src/app/customer/footer-page/footer-page.component.html
+++ b/src/app/customer/footer-page/footer-page.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-4">
             <div style="margin-top:20px">
-                <span class="Article">Product</span>
+                <span class="Article">สินค้า</span>
                 <div>
                     <!-- {{spec | json}} -->
                     <div *ngFor="let item of spec" style="margin: 10px;">
@@ -16,7 +16,7 @@
         </div>
         <div class="col-4">
             <div style="margin-top:20px">
-                <span class="Article">Contact</span>
+                <span class="Article">ติดต่อ</span>
                 <br>
                 
                     <mat-icon style="padding: 0px;">pin_drop</mat-icon><div class="contact">{{Footer.address}}</div>
