--- a/src/app/customer/profile/dialog-email.html
+++ b/src/app/customer/profile/dialog-email.html
@@ -8,7 +8,7 @@
             <label for="exampleFormControlInput1" class="form-label">Email</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" [(ngModel)]="obj.email">
             <br>
-            <button (click)="changeEmail()">changeEmail</button>
+            <button (click)="changeEmail()">เปลี่ยนอีเมล</button>
           </div>
     </div>
 </div>
