--- a/src/app/customer/profile/dialog-password.html
+++ b/src/app/customer/profile/dialog-password.html
@@ -3,13 +3,13 @@
         <div class="mb-3">
             
             <br>
-            <label for="exampleFormControlInput1" class="form-label" >old password </label>
+            <label for="exampleFormControlInput1" class="form-label" >รหัสเก่า </label>
             <input type="password" class="form-control" [(ngModel)]="obj.oldPassword" >
             <br><br>
-            <label for="exampleFormControlInput1" class="form-label">new password</label>
+            <label for="exampleFormControlInput1" class="form-label">รหัสใหม่</label>
             <input type="password" class="form-control" [(ngModel)]="obj.newPassword" >
             <br>
-            <button (click)="changePassword()">change</button>
+            <button (click)="changePassword()">ตกลง</button>
         </div>
     </div>
 </div>
