--- a/src/app/navBavcomponents/public-navbar/public-navbar.component.html
+++ b/src/app/navBavcomponents/public-navbar/public-navbar.component.html
@@ -2,6 +2,6 @@
   <img src="{{logo}}" style="width: 90px;">
   <span>{{nameShop}}</span>
   <span class="example-spacer"></span>
-  <button mat-flat-button color="warn" (click)="login()">log in</button>
+  <button mat-flat-button color="warn" (click)="login()">เข้าสู่ระบบ</button>
 </mat-toolbar>
 <app-home></app-home>
