--- a/src/app/admin/add-product/add-product.component.html
+++ b/src/app/admin/add-product/add-product.component.html
@@ -72,7 +72,7 @@
     
       <img *ngIf="previewLoaded" class="img-thumbnail" #dilog [src]="this.product.value.img" style="height:150px;" >
       <br><br>
-      <button type="button"  (click)="submitProduct()" class="btn btn-primary">submit</button>
+      <button type="button"  (click)="submitProduct()" class="btn btn-primary">ยืนยัน</button>
 
 
     </div>
