--- a/src/app/admin/update-product/update-product.component.html
+++ b/src/app/admin/update-product/update-product.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-3" style="background-color: rgb(255, 255, 255)">
-            <p>{{item | json}}</p>
+            <!-- <p>{{item | json}}</p> -->
         </div>
         <div class="col-6" style="background-color: rgb(255, 255, 255)">
             <div class="mb-3 row">
@@ -65,10 +65,10 @@
         
         </div>
         <div class="col-3" style="background-color: rgb(255, 255, 255)">
-            {{bufferspec | json}}
+            <!-- {{bufferspec | json}} -->
 
             <br><br>
-            {{productOne | json}}
+            <!-- {{productOne | json}} -->
         </div>
     </div>
 </div>
