--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid" style="padding: 0;">
+<div class="container-fluid" style="padding: 0;width: 100%;">
     <div class="row">
       <div class="col-1" style="background-color: #3F51B5;"></div>
       <div class="col-10" style="height: 400px;background-color: #3F51B5;display: flex;justify-content: center;">
@@ -15,13 +15,13 @@
       <div class="col-2" >
         <mat-button-toggle-group style="display: block;margin-top: 50px;margin-left: 15px;" name="fontStyle" aria-label="Font Style" >
   
-          <mat-button-toggle style="display: block;" (click)="FilterAll()" >All</mat-button-toggle>
+          <mat-button-toggle style="display: block;" (click)="FilterAll()" >สินค้าทั้งหมด</mat-button-toggle>
             <mat-button-toggle style="display: block;" (click)="Filter(item)" *ngFor="let item of specModel">{{item.name}}</mat-button-toggle>
   
         </mat-button-toggle-group>
       </div>
       
-      <div class="col-10" style="padding-left: 120px;background-color: #ffffff;min-height: 1000px;">
+      <div class="col-10" style="padding-left: 100px;background-color: #ffffff;min-height: 1000px;">
 
         <div *ngIf="true">
           <mat-form-field appearance="standard" style="width: 300px;">
@@ -47,8 +47,9 @@
 
     
     </div>
-    <div style="margin: 0;">
+    
+  </div>
+  <div style="margin: 0;">
       
-      <app-footer-page [Footer]="FooterData" [spec]="specModel"></app-footer-page>
-    </div>
+    <app-footer-page [Footer]="FooterData" [spec]="specModel"></app-footer-page>
   </div>
