--- a/src/app/login-components/dialog-reset-password.html
+++ b/src/app/login-components/dialog-reset-password.html
@@ -7,7 +7,7 @@
             <br>
             <label for="exampleFormControlInput1" class="form-label">Email</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" [(ngModel)]="email">
-            <button class="btn btn-secondary" (click)="resetPassword()" type="submit"  style="margin-right: 10px;">sumit</button>
+            <button class="btn btn-secondary" (click)="resetPassword()" type="submit"  style="margin-right: 10px;margin-top: 18px;">ตกลง</button>
           </div>
     </div>
 </div>
