--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -1,4 +1,8 @@
-
+<mat-toolbar style="background-color: #303F9F;color: aliceblue;">
+  <img src="{{logo}}" style="width: 90px;margin: 0;padding: 0;">
+  <span><a (click)="home()">{{nameShop}}</a> </span>
+  <span class="example-spacer"></span>
+</mat-toolbar>
 <div class="container">
     <div class="row">
       <div class="col">
@@ -18,8 +22,8 @@
            
   
             <div class="mb-3 pt-3">
-              <label for="exampleFormControlInput1" class="form-label">ชื่อ-นามสกุล</label>
-              <input class="form-control" type="text" formControlName='name' placeholder="firstname lastname">
+              <label for="exampleFormControlInput1" class="form-label">ชื่อผู้ใช้งาน</label>
+              <input class="form-control" type="text" formControlName='name' >
             </div>
           </form>
       
@@ -57,8 +61,8 @@
   
             <div style="float:right;margin-top: 20px;">
              
-              <button class="btn btn-info" type="submit" (click)="save()">sing up</button>
-              <button class="btn btn-info" type="submit" (click)="back()" style="margin-left: 20px;background-color: cadetblue;">back</button>
+              <button class="btn btn-info" type="submit" (click)="save()">ยืนยันสมัคร</button>
+              <button class="btn btn-info" type="submit" (click)="back()" style="margin-left: 20px;background-color: cadetblue;">กลับ</button>
             </div>
             
           
